# YogaMain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Yoga.postman_collection.json  alembic.ini  compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  pkmixin.py  query.py  schema.py  schema_graphql.py  schemas.py  settings.py
app/dependencies/: __init__.py  auth.py  cloudfront.py  courses_cache.py  redis.py  s3.py  session.py
app/routes/: __init__.py  auth.py  courses.py  group_trainings.py  studio_trainings.py  studios.py  trainings_info.py  trips.py  users.py  videos.py
app/utils/: __init__.py  load_private_key.py  redis_client.py  s3.py
app/utils/auth/: google.py  jwt.py  passwords.py  refresh_tokens.py  service.py
app/utils/aws/: __init__.py  cloud_front.py  cloudfront.py  s3.py
app/utils/routes/: __init__.py  user.py  video.py
db/: env.py
db/versions/: adef0a2e14bd_init.py  b5af3fa12a68_add_video_s3_key.py  bbc54970ce58_changed_grouptrainings.py  c1a7e9f3d2b4_user_fk_on_delete_cascade.py  efbb6e7b5422_add_auth_fields_and_refreshtoken.py
tests/: conftest.py  test_auth_endpoints.py  test_auth_google.py  test_auth_jwt.py  test_auth_passwords.py  test_auth_refresh_tokens.py  test_auth_service.py  test_endpoints.py  test_models.py  test_users_endpoints.py
