[project]
name = "mainyoga"
version = "0.1.0"
description = ""
authors = [
    {name = "GFTSA1",email = "fix.pgoncharevskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart] (>=0.128.0,<0.129.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
