[project]
name = "mainyoga"
version = "0.1.0"
description = ""
authors = [
    {name = "GFTSA1",email = "fix.pgoncharevskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
minversion = "9.0"
addopts = ["-v"]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_test.py"]